--- a/index.html
+++ b/index.html
@@ -148,32 +148,28 @@
           <h2 class="text-2xl font-bold mb-4 text-red-700">Registrar Gasto</h2>
           <form id="form-gasto" class="grid grid-cols-1 gap-4">
             <input class="border p-2 rounded" type="date" required>
-            <input class="border p-2 rounded" type="text" placeholder="Descripción del gasto" required>
-            <input class="border p-2 rounded" type="number" placeholder="Monto" required>
-            <select class="border p-2 rounded" required>
-              <option value="">Categoría</option>
-              <option value="alquiler">Alquiler</option>
-              <option value="servicios">Servicios</option>
-              <option value="insumos">Insumos</option>
-              <option value="otros">Otros</option>
-            </select>
-            <select class="border p-2 rounded" required>
-              <option value="efectivo">Efectivo</option>
-              <option value="transferencia">Transferencia</option>
-              <option value="tarjeta">Tarjeta</option>
-            </select>
-            <select class="border p-2 rounded" required>
-              <option value="ARS">Pesos</option>
-              <option value="USD">Dólares</option>
-            </select>
+            <input class="border p-2 rounded" type="number" step="0.01" placeholder="Monto en pesos (ARS)">
+            <input class="border p-2 rounded" type="number" step="0.01" placeholder="Monto en dólares (USD)">
+            <input class="border p-2 rounded" type="text" placeholder="¿Quién realizó el gasto?" required>
+            <textarea class="border p-2 rounded" placeholder="Descripción del gasto" required></textarea>
             <button type="submit" class="bg-red-600 hover:bg-red-700 text-white py-2 rounded">Guardar Gasto</button>
           </form>
         `;
-      } else {
+      } else if (tipo === "consulta") {
         contenedor.innerHTML = `
-          <h2 class="text-2xl font-bold mb-4 capitalize text-gray-800">${tipo}</h2>
-          <p class="text-gray-600">Formulario para <strong>${tipo}</strong> en desarrollo...</p>
+          <h2 class="text-2xl font-bold mb-4 text-gray-700">Consultas</h2>
+          <label class="block mb-4">
+            <span class="text-gray-700">Seleccionar tipo:</span>
+            <select id="tipo-consulta" class="border p-2 rounded w-full">
+              <option value="mercaderia">Mercadería</option>
+              <option value="ventas">Ventas</option>
+              <option value="gastos">Gastos</option>
+            </select>
+          </label>
+          <div id="tabla-consultas" class="overflow-x-auto mt-4"></div>
         `;
+        document.getElementById('tipo-consulta').addEventListener('change', cargarConsulta);
+        cargarConsulta();
       }
     }
 
@@ -226,11 +222,10 @@
         const f = e.target;
         const gasto = {
           fecha: f[0].value,
-          descripcion: f[1].value,
-          monto: parseFloat(f[2].value),
-          categoria: f[3].value,
-          medioPago: f[4].value,
-          moneda: f[5].value,
+          montoPesos: parseFloat(f[1].value) || 0,
+          montoUSD: parseFloat(f[2].value) || 0,
+          quien: f[3].value,
+          descripcion: f[4].value,
           creadoEn: new Date().toISOString()
         };
         db.ref('gastos').push(gasto);
@@ -238,6 +233,29 @@
         f.reset();
       }
     });
+
+    function cargarConsulta() {
+      const tipo = document.getElementById("tipo-consulta").value;
+      const tablaContenedor = document.getElementById("tabla-consultas");
+      db.ref(tipo).limitToLast(10).once("value", snapshot => {
+        if (!snapshot.exists()) {
+          tablaContenedor.innerHTML = `<p class="text-gray-600">No hay datos para mostrar.</p>`;
+          return;
+        }
+
+        const datos = Object.values(snapshot.val());
+        const claves = Object.keys(datos[0]);
+
+        let html = `<table class="min-w-full bg-white border border-gray-300">
+          <thead><tr>${claves.map(c => `<th class="px-4 py-2 border">${c}</th>`).join("")}</tr></thead>
+          <tbody>${datos.map(item => `
+            <tr>${claves.map(clave => `<td class="px-4 py-2 border text-sm">${item[clave] ?? ''}</td>`).join("")}</tr>
+          `).join("")}</tbody>
+        </table>`;
+
+        tablaContenedor.innerHTML = html;
+      });
+    }
   </script>
 </body>
 </html>
