--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <input class="border p-2 rounded" type="text" placeholder="Modelo" required>
             <input class="border p-2 rounded" type="text" placeholder="Color" required>
             <input class="border p-2 rounded" type="text" placeholder="Duración de batería">
-            <input class="border p-2 rounded" type="number" placeholder="Precio de compra" required>
-            <input class="border p-2 rounded" type="number" placeholder="Precio de venta" required>
+            <input class="border p-2 rounded" type="text" placeholder="Precio de compra" required inputmode="decimal" pattern="[0-9]+([.,][0-9]{0,2})?">
+            <input class="border p-2 rounded" type="text" placeholder="Precio de venta" required inputmode="decimal" pattern="[0-9]+([.,][0-9]{0,2})?">
             <input class="border p-2 rounded" type="date" required>
             <select class="border p-2 rounded">
               <option value="">Estado</option>
@@ -149,8 +149,8 @@
           <h2 class="text-2xl font-bold mb-4 text-red-700">Registrar Gasto</h2>
           <form id="form-gasto" class="grid grid-cols-1 gap-4">
             <input class="border p-2 rounded" type="date" required>
-            <input class="border p-2 rounded" type="number" step="0.01" placeholder="Monto en pesos (ARS)">
-            <input class="border p-2 rounded" type="number" step="0.01" placeholder="Monto en dólares (USD)">
+            <input class="border p-2 rounded" type="text" placeholder="Monto en pesos (ARS)" inputmode="decimal" pattern="[0-9]+([.,][0-9]{0,2})?">
+            <input class="border p-2 rounded" type="text" placeholder="Monto en dólares (USD)" inputmode="decimal" pattern="[0-9]+([.,][0-9]{0,2})?">
             <input class="border p-2 rounded" type="text" placeholder="¿Quién realizó el gasto?" required>
             <textarea class="border p-2 rounded" placeholder="Descripción del gasto" required></textarea>
             <button type="submit" class="bg-red-600 hover:bg-red-700 text-white py-2 rounded">Guardar Gasto</button>
@@ -174,6 +174,14 @@
       }
     }
 
+    // Función para normalizar y parsear número decimal con coma o punto
+    function parseDecimal(valor) {
+      if (!valor) return 0;
+      valor = valor.trim().replace(',', '.');
+      let num = parseFloat(valor);
+      return isNaN(num) ? 0 : +num.toFixed(2);
+    }
+
     document.addEventListener('submit', function(e) {
       if (e.target.id === 'form-mercaderia') {
         e.preventDefault();
@@ -183,8 +191,8 @@
           modelo: f[1].value,
           color: f[2].value,
           duracionBateria: f[3].value,
-          precioCompra: parseFloat(Number(f[4].value).toFixed(2)),
-          precioVenta: parseFloat(Number(f[5].value).toFixed(2)),
+          precioCompra: parseDecimal(f[4].value),
+          precioVenta: parseDecimal(f[5].value),
           fechaIngreso: f[6].value,
           estado: f[7].value,
           observaciones: f[8].value,
@@ -205,9 +213,9 @@
           imei: f[3].value,
           modelo: document.getElementById('venta-modelo').textContent,
           color: document.getElementById('venta-color').textContent,
-          precioBase: parseFloat(document.getElementById('venta-precio').textContent),
-          bonificacion: parseFloat(document.getElementById('bonificacion').value) || 0,
-          precioFinal: parseFloat(document.getElementById('precio-final').textContent),
+          precioBase: parseDecimal(document.getElementById('venta-precio').textContent),
+          bonificacion: parseDecimal(document.getElementById('bonificacion').value),
+          precioFinal: parseDecimal(document.getElementById('precio-final').textContent),
           formaPago: document.getElementById('forma-pago').value,
           moneda: document.getElementById('moneda').value,
           creadoEn: new Date().toISOString()
@@ -223,8 +231,8 @@
         const f = e.target;
         const gasto = {
           fecha: f[0].value,
-          montoPesos: parseFloat(f[1].value) ? parseFloat(f[1].value).toFixed(2) : "0.00",
-          montoUSD: parseFloat(f[2].value) ? parseFloat(f[2].value).toFixed(2) : "0.00",
+          montoPesos: parseDecimal(f[1].value),
+          montoUSD: parseDecimal(f[2].value),
           quien: f[3].value,
           descripcion: f[4].value,
           creadoEn: new Date().toISOString()
