--- a/index.html
+++ b/index.html
@@ -157,22 +157,32 @@
           </form>
         `;
       } else if (tipo === "consulta") {
-        contenedor.innerHTML = `
-          <h2 class="text-2xl font-bold mb-4 text-gray-700">Consultas</h2>
-          <label class="block mb-4">
-            <span class="text-gray-700">Seleccionar tipo:</span>
-            <select id="tipo-consulta" class="border p-2 rounded w-full">
-              <option value="mercaderia">Mercadería</option>
-              <option value="ventas">Ventas</option>
-              <option value="gastos">Gastos</option>
-            </select>
-          </label>
-          <div id="tabla-consultas" class="overflow-x-auto mt-4"></div>
-        `;
-        document.getElementById('tipo-consulta').addEventListener('change', cargarConsulta);
-        cargarConsulta();
-      }
-    }
+          contenedor.innerHTML = `
+            <h2 class="text-2xl font-bold mb-4 text-gray-700">Consultas</h2>
+
+            <label class="block mb-4">
+              <span class="text-gray-700">Seleccionar tipo:</span>
+              <select id="tipo-consulta" class="border p-2 rounded w-full">
+                <option value="mercaderia">Mercadería</option>
+                <option value="ventas">Ventas</option>
+                <option value="gastos">Gastos</option>
+              </select>
+            </label>
+
+            <div id="tabla-consultas" class="overflow-x-auto mt-4"></div>
+
+            <div class="mt-6 p-4 border-t border-gray-300">
+              <h3 class="text-lg font-bold text-gray-800 mb-2">Ganancia por Mes</h3>
+              <label class="block mb-2 text-sm text-gray-700">Seleccionar Mes y Año:</label>
+              <input type="month" id="mes-ganancia" class="border p-2 rounded mb-2" value="${new Date().toISOString().slice(0,7)}">
+              <button onclick="verGananciasMensuales()" class="bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-4 rounded">Ver Ganancia</button>
+              <div id="resultado-ganancia-mensual" class="mt-4 text-sm text-gray-800"></div>
+            </div>
+          `;
+          document.getElementById('tipo-consulta').addEventListener('change', cargarConsulta);
+          cargarConsulta();
+        }
+
 
     // Función para normalizar y parsear número decimal con coma o punto
     function parseDecimal(valor) {
@@ -265,6 +275,80 @@
         tablaContenedor.innerHTML = html;
       });
     }
+
+    async function verGananciasMensuales() {
+      const mesSeleccionado = document.getElementById("mes-ganancia").value;
+      const resultado = document.getElementById("resultado-ganancia-mensual");
+
+      if (!mesSeleccionado) {
+        resultado.innerHTML = "<p class='text-red-600'>⚠️ Por favor seleccioná un mes.</p>";
+        return;
+      }
+
+      resultado.innerHTML = "<p class='text-gray-500'>🔄 Calculando ganancias...</p>";
+
+      const [ventasSnap, mercaderiaSnap, gastosSnap] = await Promise.all([
+        db.ref("ventas").once("value"),
+        db.ref("mercaderia").once("value"),
+        db.ref("gastos").once("value")
+      ]);
+
+      const ventas = Object.values(ventasSnap.val() || {}).filter(v => v.fecha?.startsWith(mesSeleccionado));
+      const mercaderia = mercaderiaSnap.val() || {};
+      const gastos = Object.values(gastosSnap.val() || {}).filter(g => g.fecha?.startsWith(mesSeleccionado));
+
+      const resumen = {};
+      let totalGanancia = 0;
+
+      for (let venta of ventas) {
+        const celular = Object.values(mercaderia).find(m => m.imei === venta.imei);
+        const costo = parseDecimal(celular?.precioCompra);
+        const precioFinal = parseDecimal(venta.precioFinal);
+        const ganancia = precioFinal - costo;
+
+        const clave = `${venta.formaPago}-${venta.moneda}`;
+        if (!resumen[clave]) resumen[clave] = { ventas: 0, costos: 0, ganancia: 0 };
+
+        resumen[clave].ventas += precioFinal;
+        resumen[clave].costos += costo;
+        resumen[clave].ganancia += ganancia;
+        totalGanancia += ganancia;
+      }
+
+      let gastosARS = 0, gastosUSD = 0;
+      for (let g of gastos) {
+        gastosARS += parseDecimal(g.montoPesos);
+        gastosUSD += parseDecimal(g.montoUSD);
+      }
+
+      let html = `<table class='min-w-full bg-white border border-gray-300 mb-4'>
+        <thead><tr class="bg-gray-100">
+          <th class='px-2 py-1 border'>Forma de Pago</th>
+          <th class='px-2 py-1 border'>Moneda</th>
+          <th class='px-2 py-1 border'>Ventas</th>
+          <th class='px-2 py-1 border'>Costo</th>
+          <th class='px-2 py-1 border'>Ganancia</th>
+        </tr></thead><tbody>`;
+
+      for (let clave in resumen) {
+        const [forma, moneda] = clave.split("-");
+        const r = resumen[clave];
+        html += `<tr>
+          <td class='px-2 py-1 border'>${forma}</td>
+          <td class='px-2 py-1 border'>${moneda}</td>
+          <td class='px-2 py-1 border'>$${r.ventas.toFixed(2)}</td>
+          <td class='px-2 py-1 border'>$${r.costos.toFixed(2)}</td>
+          <td class='px-2 py-1 border font-semibold'>$${r.ganancia.toFixed(2)}</td>
+        </tr>`;
+      }
+
+      html += `</tbody></table>`;
+      html += `<p class='text-sm font-semibold text-red-600 mt-2'>Gastos: ARS $${gastosARS.toFixed(2)} | USD $${gastosUSD.toFixed(2)}</p>`;
+      html += `<p class='text-sm font-bold text-green-700'>Ganancia neta: ARS $${(totalGanancia - gastosARS).toFixed(2)}</p>`;
+
+      resultado.innerHTML = html;
+    }
+
   </script>
 </body>
 </html>
