--- a/index.html
+++ b/index.html
@@ -278,43 +278,68 @@
     }
 
     // NUEVA FUNCIÓN PARA GANANCIAS MENSUALES
-    function verGananciasMensuales() {
-      const mesAnio = document.getElementById('mes-ganancia').value; // Formato "YYYY-MM"
-      if (!mesAnio) {
-        alert("Selecciona un mes y año válidos.");
-        return;
+async function verGananciasMensuales() {
+  const mesAnio = document.getElementById('mes-ganancia').value; // "YYYY-MM"
+  if (!mesAnio) {
+    alert("Selecciona un mes y año válidos.");
+    return;
+  }
+  const inicio = mesAnio + "-01";
+  const [year, month] = mesAnio.split("-");
+  const nextMonth = (parseInt(month) + 1).toString().padStart(2, '0');
+  const fin = (parseInt(month) === 12) ? (parseInt(year) + 1) + "-01-01" : year + "-" + nextMonth + "-01";
+
+  // Obtener ventas, compras y gastos del mes de Firebase con promesas
+  try {
+    const ventasSnap = await db.ref('ventas').orderByChild('fecha').startAt(inicio).endBefore(fin).once('value');
+    const comprasSnap = await db.ref('mercaderia').orderByChild('fechaIngreso').startAt(inicio).endBefore(fin).once('value');
+    const gastosSnap = await db.ref('gastos').orderByChild('fecha').startAt(inicio).endBefore(fin).once('value');
+
+    const ventas = ventasSnap.exists() ? ventasSnap.val() : {};
+    const compras = comprasSnap.exists() ? comprasSnap.val() : {};
+    const gastos = gastosSnap.exists() ? gastosSnap.val() : {};
+
+    // Crear un mapa de IMEI -> precioCompra para buscar rápido precio compra
+    const mapaCompras = {};
+    Object.values(compras).forEach(c => {
+      if (c.imei) {
+        mapaCompras[c.imei] = parseDecimal(c.precioCompra);
       }
-      const inicio = mesAnio + "-01";
-      // Para fin de mes sumamos 1 mes y restamos 1 día (simple para filtro)
-      const [year, month] = mesAnio.split("-");
-      const nextMonth = (parseInt(month) + 1).toString().padStart(2, '0');
-      const fin = (parseInt(month) === 12) ? (parseInt(year) + 1) + "-01-01" : year + "-" + nextMonth + "-01";
+    });
 
-      let totalVentas = 0;
-      let totalCompras = 0;
+    // Calcular ganancia por venta
+    let gananciaTotal = 0;
+    Object.values(ventas).forEach(v => {
+      const precioVenta = parseDecimal(v.precioFinal || 0);
+      const precioCompra = mapaCompras[v.imei] ?? 0;
+      const ganancia = precioVenta - precioCompra;
+      gananciaTotal += ganancia;
+    });
 
-      // Obtener ventas del mes
-      db.ref('ventas').orderByChild('fecha').startAt(inicio).endBefore(fin).once('value', snapshotVentas => {
-        if (snapshotVentas.exists()) {
-          snapshotVentas.forEach(child => {
-            const v = child.val();
-            totalVentas += parseDecimal(v.precioFinal || 0);
-          });
-        }
-        // Obtener compras del mes
-        db.ref('mercaderia').orderByChild('fechaIngreso').startAt(inicio).endBefore(fin).once('value', snapshotCompras => {
-          if (snapshotCompras.exists()) {
-            snapshotCompras.forEach(child => {
-              const c = child.val();
-              totalCompras += parseDecimal(c.precioCompra || 0);
-            });
-          }
-          const ganancia = totalVentas - totalCompras;
-          document.getElementById('resultado-ganancia-mensual').textContent = 
-            `Ganancia neta en ${mesAnio}: $${ganancia.toFixed(2)}`;
-        });
-      });
-    }
+    // Sumar todos los gastos del mes (sumar ambos montos en pesos y USD convertidos)
+    let gastosTotalPesos = 0;
+    let gastosTotalUSD = 0;
+    Object.values(gastos).forEach(g => {
+      gastosTotalPesos += parseDecimal(g.montoPesos || 0);
+      gastosTotalUSD += parseDecimal(g.montoUSD || 0);
+    });
+
+    // Convertir USD a pesos (suponé un tipo de cambio fijo, podés obtenerlo dinámicamente si querés)
+    const tipoCambioUSD = 350; // ejemplo, cambiar según corresponda
+    const gastosTotal = gastosTotalPesos + gastosTotalUSD * tipoCambioUSD;
+
+    const gananciaNeta = gananciaTotal - gastosTotal;
+
+    document.getElementById('resultado-ganancia-mensual').textContent =
+      `Ganancia neta en ${mesAnio}: $${gananciaNeta.toFixed(2)} (Ganancia: $${gananciaTotal.toFixed(2)} - Gastos: $${gastosTotal.toFixed(2)})`;
+
+  } catch (error) {
+    console.error("Error al calcular ganancias mensuales:", error);
+    alert("Error al obtener los datos. Intente nuevamente.");
+  }
+}
+
+
   </script>
 </body>
 </html>
